丰富、优化 Utils